{
    "name": "GameplayInput",
    "maps": [
        {
            "name": "Player",
            "id": "60439d12-88e2-438c-86e6-2bbbc4be5f88",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "abd02a35-fc0c-4529-9990-17f07490fc77",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ButtonA",
                    "type": "Button",
                    "id": "6a14bf71-664e-4533-b78e-67053e0add9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonB",
                    "type": "Button",
                    "id": "1e7385af-12dc-4363-95a3-7b5178c7b239",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonX",
                    "type": "Button",
                    "id": "8bedf50c-47d5-4107-b846-eb80481b3ba3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonY",
                    "type": "Button",
                    "id": "6948f76c-ea8d-4c65-b6f8-b347aba4ecdc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3b0830c-fe5c-4af0-97cb-a9814563f9f3",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f414280d-d1cb-4bba-9af8-f8b1c3f1f3da",
                    "path": "/<GamePad>/A",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d20cfb18-7ce5-48ea-bb79-63943a8781e9",
                    "path": "/<GamePad>/B",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1521496-a266-4ece-a5e3-e1ff62ad9177",
                    "path": "/<GamePad>/X",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0326f32d-3bf4-4362-85b1-bf614045b580",
                    "path": "/<GamePad>/Y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}